--- a/dev-store/src/style/index.css
+++ b/dev-store/src/style/index.css
@@ -16,29 +16,35 @@ body {
  word-wrap: break-word
 }
 
-@media (min-width: 480px) {
-   .w3-5-ns {
+@media screen and (min-width: 30em) {
+   .wh3-5-ns {
      width: 6em;
+     height: 6em;
    }
-   .w4-5-ns {
+   .wh4-5-ns {
      width: 12em;
+     height: 12em;
    }
  }
 
-@media (min-width: 480px) and (max-width: 960px) {
-    .w3-5-m {
+@media screen and (min-width: 30em) and (max-width: 60em) {
+    .wh3-5-m {
       width: 6em;
+      height: 6em;
     }
-    .w4-5-m {
+    .wh4-5-m {
       width: 12em;
+      height: 12em;
     }
   }
 
-  @media (min-width: 960px) {
-     .w3-5-l {
+  @media screen and (max-width: 60em) {
+     .wh3-5-l {
        width: 6em;
+       height: 6em;
      }
-     .w4-5-l {
+     .wh4-5-l {
        width: 12em;
+       height: 12em;
      }
    }
