--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -21,34 +21,93 @@ body {
 }
 
 @media screen and (min-width: 30em) {
-   .wh3-5-ns {
+ .wh3-5-ns {
+   width: 6em;
+   height: 6em;
+ }
+ .wh4-5-ns {
+   width: 12em;
+   height: 12em;
+ }
+}
+
+@media screen and (min-width: 30em) and (max-width: 60em) {
+  .wh3-5-m {
+    width: 6em;
+    height: 6em;
+  }
+  .wh4-5-m {
+    width: 12em;
+    height: 12em;
+  }
+}
+
+@media screen and (max-width: 60em) {
+   .wh3-5-l {
      width: 6em;
      height: 6em;
    }
-   .wh4-5-ns {
+   .wh4-5-l {
      width: 12em;
      height: 12em;
    }
  }
 
-@media screen and (min-width: 30em) and (max-width: 60em) {
-    .wh3-5-m {
-      width: 6em;
-      height: 6em;
-    }
-    .wh4-5-m {
-      width: 12em;
-      height: 12em;
-    }
-  }
 
-  @media screen and (max-width: 60em) {
-     .wh3-5-l {
-       width: 6em;
-       height: 6em;
-     }
-     .wh4-5-l {
-       width: 12em;
-       height: 12em;
-     }
-   }
+/*Checkmark*/
+.checkmark {
+  width: 100px;
+  display: block;
+  margin: 40px auto 0;
+}
+.path {
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 0;
+}
+.path.circle {
+  -webkit-animation: dash 0.9s ease-in-out;
+  animation: dash 0.9s ease-in-out;
+}
+.path.line {
+  stroke-dashoffset: 1000;
+  -webkit-animation: dash 0.9s 0.35s ease-in-out forwards;
+  animation: dash 0.9s 0.35s ease-in-out forwards;
+}
+.path.check {
+  stroke-dashoffset: -100;
+  -webkit-animation: dash-check 0.9s 0.35s ease-in-out forwards;
+  animation: dash-check 0.9s 0.35s ease-in-out forwards;
+}
+
+@-webkit-keyframes dash {
+  0% {
+    stroke-dashoffset: 1000;
+  }
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes dash {
+  0% {
+    stroke-dashoffset: 1000;
+  }
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+@-webkit-keyframes dash-check {
+  0% {
+    stroke-dashoffset: -100;
+  }
+  100% {
+    stroke-dashoffset: 900;
+  }
+}
+@keyframes dash-check {
+  0% {
+    stroke-dashoffset: -100;
+  }
+  100% {
+    stroke-dashoffset: 900;
+  }
+}
