--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -4,6 +4,11 @@ body {
   font-family: sans-serif;
 }
 
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .dev-info {
   height: 160px;
 }
@@ -14,6 +19,10 @@ body {
 
 .w2-5 {
   width: 3em;
+}
+
+.h4-5 {
+  width: 12em;
 }
 
 @media screen and (min-width: 30em) {
